envoy-proxy/envoy.yaml
static_resources:
  listeners:
    - name: lss_listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 3200
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                # used when emitting stats
                stat_prefix: lss_hcm_filter
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog

                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                route_config:
                  name: lss_http_route_config
                  virtual_hosts:
                    # name used when emitting stats, not imp for routing itself
                    - name: lss_virtual_host
                      domains:
                        - "*"
                      routes:
                        - name:
                          match:
                            prefix: "/"
                          route:
                            cluster: lss_service
  clusters:
    - name: lss_service
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: lss_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: livescores-service
                      port_value: 4200
